--- a/a.html
+++ b/a.html
@@ -3,75 +3,96 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>24点游戏 - 所有解法</title>
+  <title>24点求解器 - 手动输入数字</title>
   <style>
     body {
       font-family: "Microsoft YaHei", sans-serif;
-      max-width: 800px;
+      max-width: 700px;
       margin: 30px auto;
       padding: 20px;
-      background-color: #f9f9f9;
+      background-color: #f8f9fa;
       color: #333;
     }
     h1 {
       text-align: center;
       color: #2c3e50;
     }
-    .controls {
+    .input-area {
       text-align: center;
       margin: 20px 0;
+    }
+    input {
+      width: 60px;
+      padding: 8px;
+      margin: 0 5px;
+      font-size: 16px;
+      text-align: center;
+      border: 1px solid #ccc;
+      border-radius: 4px;
     }
     button {
       padding: 10px 20px;
       font-size: 16px;
-      background-color: #3498db;
+      background-color: #2ecc71;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
+      margin-top: 10px;
     }
     button:hover {
-      background-color: #2980b9;
-    }
-    .numbers {
-      text-align: center;
-      font-size: 24px;
-      margin: 20px 0;
-      font-weight: bold;
-      color: #e74c3c;
+      background-color: #27ae60;
     }
     .solutions {
       margin-top: 20px;
     }
     .solution-item {
-      background-color: #ecf0f1;
+      background-color: #e8f4f8;
       padding: 10px;
       margin: 8px 0;
-      border-left: 4px solid #2ecc71;
+      border-left: 4px solid #3498db;
       font-family: monospace;
       font-size: 16px;
     }
+    .error {
+      color: #e74c3c;
+      font-weight: bold;
+    }
     .no-solution {
       color: #e67e22;
-      font-style: italic;
     }
   </style>
 </head>
 <body>
-  <h1>🔢 24点游戏 - 列出所有解法</h1>
-  <div class="controls">
-    <button onclick="generateAndSolve()">生成新题目</button>
+  <h1>🔢 24点求解器（手动输入）</h1>
+  <div class="input-area">
+    <p>请输入四个数字：</p>
+    <input type="text" id="n1" value="3">
+    <input type="text" id="n2" value="3">
+    <input type="text" id="n3" value="8">
+    <input type="text" id="n4" value="8">
+    <br>
+    <button onclick="solve()">求解所有 24 点方案</button>
   </div>
-  <div class="numbers" id="numbers">点击“生成新题目”开始</div>
-  <div class="solutions" id="solutions"></div>
+  <div id="result"></div>
 
   <script>
-    // 检查两个浮点数是否近似相等（容忍 1e-10 误差）
     function isEqual(a, b) {
       return Math.abs(a - b) < 1e-10;
     }
 
-    // 获取所有排列（4个数的全排列）
+    function calculate(a, b, op) {
+      switch (op) {
+        case '+': return a + b;
+        case '-': return a - b;
+        case '*': return a * b;
+        case '/': 
+          if (isEqual(b, 0)) return NaN;
+          return a / b;
+        default: return NaN;
+      }
+    }
+
     function getPermutations(arr) {
       if (arr.length <= 1) return [arr];
       let result = [];
@@ -86,116 +107,80 @@
       return result;
     }
 
-    // 所有可能的运算符组合（3个位置，每个位置4种运算）
-    const ops = ['+', '-', '*', '/'];
-    function getAllOpCombinations() {
-      let combos = [];
-      for (let a of ops)
-        for (let b of ops)
-          for (let c of ops)
-            combos.push([a, b, c]);
-      return combos;
-    }
-
-    // 安全除法：除零返回 NaN
-    function safeDivide(a, b) {
-      if (isEqual(b, 0)) return NaN;
-      return a / b;
-    }
-
-    // 根据表达式结构计算值
-    function calculate(a, b, op) {
-      switch (op) {
-        case '+': return a + b;
-        case '-': return a - b;
-        case '*': return a * b;
-        case '/': return safeDivide(a, b);
-        default: return NaN;
-      }
-    }
-
-    // 生成所有可能的带括号表达式（5种二叉树结构）
-    function evaluateAllStructures(nums, ops) {
-      const [a, b, c, d] = nums.map(n => parseFloat(n));
-      const [o1, o2, o3] = ops;
-      let results = [];
-
-      // ((a o1 b) o2 c) o3 d
-      let v1 = calculate(calculate(calculate(a, b, o1), c, o2), d, o3);
-      if (!isNaN(v1) && isEqual(v1, 24))
-        results.push(`((${a} ${o1} ${b}) ${o2} ${c}) ${o3} ${d}`);
-
-      // (a o1 (b o2 c)) o3 d
-      let v2 = calculate(calculate(a, calculate(b, c, o2), o1), d, o3);
-      if (!isNaN(v2) && isEqual(v2, 24))
-        results.push(`(${a} ${o1} (${b} ${o2} ${c})) ${o3} ${d}`);
-
-      // (a o1 b) o2 (c o3 d)
-      let v3 = calculate(calculate(a, b, o1), calculate(c, d, o3), o2);
-      if (!isNaN(v3) && isEqual(v3, 24))
-        results.push(`(${a} ${o1} ${b}) ${o2} (${c} ${o3} ${d})`);
-
-      // a o1 ((b o2 c) o3 d)
-      let v4 = calculate(a, calculate(calculate(b, c, o2), d, o3), o1);
-      if (!isNaN(v4) && isEqual(v4, 24))
-        results.push(`${a} ${o1} ((${b} ${o2} ${c}) ${o3} ${d})`);
-
-      // a o1 (b o2 (c o3 d))
-      let v5 = calculate(a, calculate(b, calculate(c, d, o3), o2), o1);
-      if (!isNaN(v5) && isEqual(v5, 24))
-        results.push(`${a} ${o1} (${b} ${o2} (${c} ${o3} ${d}))`);
-
-      return results;
-    }
-
-    // 主求解函数
-    function solve24(numbers) {
-      const perms = getPermutations(numbers);
-      const opCombos = getAllOpCombinations();
-      let allSolutions = new Set(); // 用 Set 去重
+    function solve24(nums) {
+      const ops = ['+', '-', '*', '/'];
+      const perms = getPermutations(nums);
+      const solutions = new Set();
 
       for (let p of perms) {
-        for (let ops of opCombos) {
-          let exprs = evaluateAllStructures(p, ops);
-          for (let expr of exprs) {
-            // 标准化表达式（用于去重）
-            allSolutions.add(expr);
-          }
+        const [a, b, c, d] = p;
+        for (let o1 of ops)
+        for (let o2 of ops)
+        for (let o3 of ops) {
+          // 结构1: ((a o1 b) o2 c) o3 d
+          let v1 = calculate(calculate(calculate(a, b, o1), c, o2), d, o3);
+          if (!isNaN(v1) && isEqual(v1, 24))
+            solutions.add(`((${a} ${o1} ${b}) ${o2} ${c}) ${o3} ${d}`);
+
+          // 结构2: (a o1 (b o2 c)) o3 d
+          let v2 = calculate(calculate(a, calculate(b, c, o2), o1), d, o3);
+          if (!isNaN(v2) && isEqual(v2, 24))
+            solutions.add(`(${a} ${o1} (${b} ${o2} ${c})) ${o3} ${d}`);
+
+          // 结构3: (a o1 b) o2 (c o3 d)
+          let v3 = calculate(calculate(a, b, o1), calculate(c, d, o3), o2);
+          if (!isNaN(v3) && isEqual(v3, 24))
+            solutions.add(`(${a} ${o1} ${b}) ${o2} (${c} ${o3} ${d})`);
+
+          // 结构4: a o1 ((b o2 c) o3 d)
+          let v4 = calculate(a, calculate(calculate(b, c, o2), d, o3), o1);
+          if (!isNaN(v4) && isEqual(v4, 24))
+            solutions.add(`${a} ${o1} ((${b} ${o2} ${c}) ${o3} ${d})`);
+
+          // 结构5: a o1 (b o2 (c o3 d))
+          let v5 = calculate(a, calculate(b, calculate(c, d, o3), o2), o1);
+          if (!isNaN(v5) && isEqual(v5, 24))
+            solutions.add(`${a} ${o1} (${b} ${o2} (${c} ${o3} ${d}))`);
         }
       }
-
-      return Array.from(allSolutions).sort();
+      return Array.from(solutions).sort();
     }
 
-    // 生成 4 个随机数（1~13，对应 A=1, J=11, Q=12, K=13）
-    function generateRandomNumbers() {
-      return Array.from({ length: 4 }, () => Math.floor(Math.random() * 13) + 1);return Array.from({ length: 4 }, () => Math.floor(Math.random() * 13) + 1);      const display = nums.map(formatNumber).join(' , '); Array.from({ length: 4 }, () => Math.floor(Math.random() * 13) + 1);
-    }
+    function solve() {
+      const n1 = parseFloat(document.getElementById('n1').value.trim());
+      const n2 = parseFloat(document.getElementById('n2').value.trim());
+      const n3 = parseFloat(document.getElementById('n3').value.trim());
+      const n4 = parseFloat(document.getElementById('n4').value.trim());
 
-    // 数字转显示（保留原样，或可选映射为 A,J,Q,K）// 数字转显示（保留原样，或可选映射为 A,J,Q,K）
-    function formatNumber(n) {function formatNumber(n) {
-      // 可选：return n === 1 ? 'A' : n === 11 ? 'J' : n === 12 ? 'Q' : n === 13 ? 'K' : n;// 可选：return n === 1 ? 'A' : n === 11 ? 'J' : n === 12 ? 'Q' : n === 13 ? 'K' : n;
-      return n;return n;
-    }
+      // 检查是否为有效数字
+      if ([n1, n2, n3, n4].some(isNaN)) {
+        document.getElementById('result').innerHTML = 
+          '<p class="error">❌ 请输入有效的数字（如：3, 3.5, -2）</p>';
+        return;
+      }
 
-    // 主入口
-    function generateAndSolve() {function generateAndSolve() {
-      const nums = generateRandomNumbers();const nums = generateRandomNumbers();
-      const display = nums.map(formatNumber).join(' , ');const display = nums.map(formatNumber).join(' , ');
-      document.getElementById('numbers').textContent = `数字：${display}`;document.getElementById('numbers').textContent = `数字：${display}`;
+      const nums = [n1, n2, n3, n4];
+      const solutions = solve24(nums);
 
-      const solutions = solve24(nums);const solutions = solve24(nums);
-
-      const solDiv = document.getElementById('solutions');const solDiv = document.getElementById('solutions');
-      if (solutions.length === 0) {if (solutions.length === 0) {
-        solDiv.innerHTML = '<p class="no-solution">❌ 无解！这组数字无法算出24。</p>';solDiv.innerHTML = '<p class="no-solution">❌ 无解！这组数字无法算出24。</p>';
-      } else {} else {
-        solDiv.innerHTML = `solDiv.innerHTML =           <p>✅ 找到 ${solutions.length} 种解法：</p>
-          <p>✅ 找到 ${solutions.          ${solutions.map(s => `<div class="solution-item">${s} = 24</div>`).join('')}} 种解法：</p>
+      const resDiv = document.getElementById('result');
+      if (solutions.length === 0) {
+        resDiv.innerHTML = `
+          <p><strong>数字: ${nums.join(', ')}</strong></p>
+          <p class="no-solution">❌ 无解！这组数字无法算出24。</p>
+        `;
+      } else {
+        resDiv.innerHTML = `
+          <p><strong>数字: ${nums.join(', ')}</strong></p>
+          <p>✅ 找到 ${solutions.length} 种解法：</p>
           ${solutions.map(s => `<div class="solution-item">${s} = 24</div>`).join('')}
         `;
       }
     }
+
+    // 页面加载时自动求解示例（可选）
+    window.onload = function() {
+      solve(); // 默认用 3,3,8,8 求解（经典题：8/(3-8/3)=24）
+    };
   </script>
 </body>
 </html>
