--- a/biji.html
+++ b/biji.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>我的笔记箱</title>
-	script src="aaaa/js/ss.js"></script>
+	<script src="aaaa/js/ss.js"></script>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -403,4 +403,5 @@ function getContentType(fileName) {
 </script>
 
 </body>
+
 </html>
